# mono.posix

./: .clang_format  .editorconfig  .gitattributes  .gitignore  .gitmodules  Directory.Build.props  LICENSE  Mono.Posix.Test.sln  Mono.Posix.sln  Mono.Unix.Common.props  Mono.Unix.Test.sln  Mono.Unix.Tests.sln  Mono.Unix.sln  README.md  build.sh  global.json
.config/: tsaoptions.json
ci/: azure-pipelines-public.yaml  azure-pipelines.yaml  common-variables.yml
ci/templates/: extract-artifact.yaml  ios-build.yaml  linux-common.yaml  mac-build.yaml  mac-common.yaml  pack-artifact.yaml  tvos-build.yaml
cmake/: toolchain.android.cmake  toolchain.apple.cmake  toolchain.ios.cmake  toolchain.linux.cmake  versions.android.cmake  versions.apple.cmake
eng/: Version.Details.xml  Versions.props
src/Mono.Posix/: Forwards.cs  LICENSE  Mono.Posix.Common.props  Mono.Posix.Test.csproj  Mono.Posix.csproj  Mono.Posix.proj
src/Mono.Posix/Assembly/: AssemblyInfo.cs
src/Mono.Posix/Mono.Remoting.Channels.Unix/: UnixChannel.cs  UnixClientChannel.cs  UnixClientTransportSinkProvider.cs  UnixConnectionPool.cs  UnixServerChannel.cs
src/Mono.Posix/Mono.Unix/: FileHandleOperations.cs  PeerCred.cs  UnixClient.cs  UnixDirectoryInfo.cs  UnixDriveInfo.cs  UnixEncoding.cs  UnixListener.cs
src/Mono.Posix/Mono.Unix.Native/: FileNameMarshaler.cs  NativeConvert.cs  RealTimeSignum.cs  Stdlib.cs  Syscall.cs
src/Mono.Posix/Obsolete/: AccessMode.cs  Catalog.cs  FileMode.cs  OpenFlags.cs  PeerCred.cs  Signals.cs  Stat.cs  StatMode.cs  StatModeMasks.cs  Syscall.cs  UnixEndPoint.cs  WaitOptions.cs
src/Mono.Posix/Test/Mono.Unix/: UnixEndPointTest.cs
src/Mono.Posix/Test/Mono.Unix.Native/: StdlibTest.cs
src/Mono.Unix/: Mono.Unix.csproj  Mono.Unix.dll.config  Mono.Unix.proj  Mono.Unix.targets
src/Mono.Unix/Assembly/: AssemblyInfo.cs
src/Mono.Unix/Documentation/en/Mono.Unix/: UnixEncoding.xml
src/Mono.Unix/Mono.Posix/: Utilities.cs
src/Mono.Unix/Mono.Remoting.Channels.Unix/: UnixServerTransportSink.cs
src/Mono.Unix/Mono.Unix/: AbstractUnixEndPoint.cs  Catalog.cs  UnixClient.cs  UnixEncoding.cs  UnixEndPoint.cs  UnixEnvironment.cs  UnixFileSystemInfo.cs  UnixGroupInfo.cs  UnixMarshal.cs  UnixPath.cs  UnixPipes.cs  UnixSignal.cs  UnixStream.cs  UnixUserInfo.cs
src/Mono.Unix/Mono.Unix.Android/: AndroidUtils.cs
src/Mono.Unix/Mono.Unix.Native/: CdeclFunction.cs  MapAttribute.cs  NativeConvert.cs  NativeConvert.generated.cs  NativeLibraryInitializer.cs  Stdlib.cs  Syscall.cs
src/native/: CMakeLists.txt  compat.apple.cc  compat.apple.hh  compat.ios.cc  compat.ios.hh  config.h.in  dirent.c  dirent.cc  errno.c  errno.cc  fcntl.c  fcntl.cc  fstab.c  fstab.cc  grp.c  grp.cc  macros.c  macros.cc  map.c  map.cc  map.h  map.hh  mph.h  mph.hh  nl.c  nl.cc  nl.h  nl.hh  old-map.cc  pwd.c  pwd.cc  serial.c  serial.cc  signal.c  signal.cc  stdio.c  stdio.cc  stdlib.c  stdlib.cc  string.c  (+31 more)
src/native/compat/: glib.h
tests/Mono.Unix.Test/: Mono.Unix.Test.csproj
tests/Mono.Unix.Test/Mono.Unix/: UnixUserTest.cs
tests/Mono.Unix.Test/Mono.Unix.Native/: RealTimeSignumTests.cs  SocketTest.cs
tests/Mono.Unix.Tests/: Mono.Unix.Tests.csproj
tests/Mono.Unix.Tests/Mono.Unix/: ReadlinkTest.cs  StdioFileStreamTest.cs  UnixEncodingTest.cs  UnixEndPointTest.cs  UnixGroupTest.cs  UnixListenerTest.cs  UnixMarshalTest.cs  UnixPathTest.cs  UnixSignalTest.cs  UnixUserTest.cs  Utilities.cs
tests/Mono.Unix.Tests/Mono.Unix.Android/: TestHelper.cs
tests/Mono.Unix.Tests/Mono.Unix.Native/: MemfdTest.cs  OFDLockTest.cs  RealTimeSignumTests.cs  SocketTest.cs  StdlibTest.cs
